Use set-face-underline rather than the alias set-face-underline-p
* lisp/woman.el (woman-non-underline-faces):
* lisp/emacs-lisp/cl-lib.el (face-underline-p):
Use set-face-underline rather than the alias set-face-underline-p.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,9 @@
 2012-11-17  Glenn Morris  <rgm@gnu.org>
 
+	* woman.el (woman-non-underline-faces):
+	* emacs-lisp/cl-lib.el (face-underline-p):
+	Use set-face-underline rather than the alias set-face-underline-p.
+
 	* window.el (with-temp-buffer-window): Doc fix.
 
 2012-11-16  Stefan Monnier  <monnier@iro.umontreal.ca>
