--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-17  Glenn Morris  <rgm@gnu.org>
+
+	* frames.texi (Size and Position): Add fit-frame-to-buffer command.
+	* windows.texi (Resizing Windows): Add fit-frame-to-buffer option.
+	(Window Sizes): Add vindex for window-min-height, window-min-width.
+
 2012-11-16  Martin Rudalics  <rudalics@gmx.at>
 
 	* windows.texi (Choosing Window): Rewrite description of
