Reword previous with-temp-buffer-window doc fixes
* lisp/window.el (with-temp-buffer-window):
Reword the doc to be more similar to with-output-to-temp-buffer.

* lisp/subr.el (with-output-to-temp-buffer):
Add doc xref to with-temp-buffer-window.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -5,6 +5,8 @@
 	Use set-face-underline rather than the alias set-face-underline-p.
 
 	* window.el (with-temp-buffer-window): Doc fix.
+	* subr.el (with-output-to-temp-buffer):
+	Add doc xref to with-temp-buffer-window.
 
 2012-11-16  Stefan Monnier  <monnier@iro.umontreal.ca>
 
