--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-17  Stephen Berman  <stephen.berman@gmx.net>
+
+	* play/gamegrid.el (gamegrid-add-score-with-update-game-score-1):
+	Don't signal an error with a score that is too low to add to the
+	list of top scores. (Bug#12779)
+
 2012-11-17  Chong Yidong  <cyd@gnu.org>
 
 	* help-mode.el (help-xref-interned): End on point-min (Bug#12737).
