--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-17  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* nsterm.m (hold_event): Set send_appdefined to YES (Bug#12834).
+	(ns_select): Return at once if events are held (Bug#12834).
+
 2012-11-16  enami tsugutomo  <tsugutomo.enami@jp.sony.com>
 
 	* unexelf.c (ELFSIZE) [__NetBSD__ && _LP64]: Set to 64.
