--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,13 @@
+2012-11-17  Eli Zaretskii  <eliz@gnu.org>
+
+	* inc/sys/wait.h: New file, with prototype of waitpid and
+	definitions of macros it needs.
+
+	* inc/ms-w32.h (wait): Don't define, 'wait' is not used anymore.
+	(sys_wait): Remove prototype.
+
+	* config.nt (HAVE_SYS_WAIT_H): Define to 1.
+
 2012-11-17  Dani Moncayo  <dmoncayo@gmail.com>
 
 	* zipdist.bat (ZIP_CHECK): Remove unused label.  When invoking 7z
