--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,25 @@
+2012-11-17  Juanma Barranquero  <lekktu@gmail.com>
+
+	* descr-text.el (quail-find-key):
+	* dired.el (desktop-file-name):
+	* dirtrack.el (shell-prefixed-directory-name, shell-process-cd):
+	* generic-x.el (comint-mode, comint-exec):
+	* image-dired.el (widget-forward):
+	* info.el (speedbar-add-expansion-list, speedbar-center-buffer-smartly)
+	(speedbar-change-expand-button-char)
+	(speedbar-change-initial-expansion-list, speedbar-delete-subblock)
+	(speedbar-make-specialized-keymap, speedbar-make-tag-line):
+	* printing.el (easy-menu-add-item, easy-menu-remove-item)
+	(widget-field-action, widget-value-set):
+	* speedbar.el (imenu--make-index-alist):
+	* term.el (ring-empty-p, ring-ref, ring-insert-at-beginning)
+	(ring-length, ring-insert):
+	* vcursor.el (compare-windows-skip-whitespace):
+	* woman.el (dired-get-filename):
+	Declare functions.
+
+	* term/w32-win.el (cygwin-convert-path-from-windows): Fix declaration.
+
 2012-11-17  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc.el (calc-gregorian-switch): New variable.
