Calc now uses the Gregorian calendar for all dates, and uses January 1, 1 AD as its day number 1. * doc/misc/calc.texi (Date Forms): Document this.
* lisp/calc/calc-forms.el (math-julian-date-beginning)
(math-julian-date-beginning-int): Implement this.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-17  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* calc/calc-forms.el (math-julian-date-beginning)
+	(math-julian-date-beginning-int): Implement [new date numbering].
+
 2012-11-17  Juanma Barranquero  <lekktu@gmail.com>
 
 	* descr-text.el (quail-find-key):
