--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-17  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Calc now uses the Gregorian calendar for all dates,
+	and uses January 1, 1 AD as its day number 1.
+	* calc.texi (Date Forms): Document this.
+
 2012-11-16  Glenn Morris  <rgm@gnu.org>
 
 	* cl.texi (Function Bindings): Clarify that cl-flet is lexical.
