--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,13 @@
+2012-11-17  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Assume POSIX 1003.1-1988 or later for fcntl.h (Bug#12881).
+	* inc/sys/socket.h (O_NONBLOCK): Rename from O_NDELAY, since the
+	POSIX name for this flag is O_NONBLOCK.  All uses changed.
+	* inc/unistd.h (O_RDWR, O_NOCTTY): New macros.  Like AT_FDCWD etc.
+	these really should be moved to a replacement <fcntl.h> if and
+	when that gets implemented.  In the meantime, include <fcntl.h>
+	to make sure we don't override its definitions.
+
 2012-11-17  Eli Zaretskii  <eliz@gnu.org>
 
 	* inc/sys/wait.h: New file, with prototype of waitpid and
