* minibuf.texi (Basic Completion): Mention misc completion-table funcs.
* etc/NEWS: Related edit.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-17  Glenn Morris  <rgm@gnu.org>
+
+	* minibuf.texi (Basic Completion): Mention misc completion-table funcs.
+
 2012-11-17  Leo Liu  <sdl.web@gmail.com>
 
 	* minibuf.texi (Programmed Completion): Doc fix for metadata
