--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-18  Juanma Barranquero  <lekktu@gmail.com>
+
+	* w32proc.c (waitpid): Remove unused label get_result.
+
 2012-11-17  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in (SYSWAIT_H): New macro.
