--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-18  Juanma Barranquero  <lekktu@gmail.com>
+
+	* woman.el (woman-non-underline-faces): Use `set-face-underline'.
+	* calc/calc.el (math-format-date-cache): Declare.
+
 2012-11-17  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* calc/calc-forms.el (math-julian-date-beginning)
