--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-18  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Minor cleanup for times as lists of four integers.
+	* os.texi (Time Parsing): Time values can now be four integers.
+
 2012-11-18  Glenn Morris  <rgm@gnu.org>
 
 	* loading.texi (How Programs Do Loading): Add eager macro expansion.
