--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,13 @@
+2012-11-18  Chong Yidong  <cyd@gnu.org>
+
+	* filecache.el (file-cache--read-list): New function.
+	(file-cache-add-directory-list, file-cache-add-file-list)
+	(file-cache-delete-file-list, file-cache-delete-directory-list):
+	Use it to read a list of files or directories (Bug#12846).
+	(file-cache-add-file, file-cache-add-directory)
+	(file-cache-delete-file-list, file-cache-delete-file-regexp)
+	(file-cache-delete-directory): Print an message.
+
 2012-11-18  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc-forms.el (math-date-to-dt): Use integer date when
