--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/ert.el (ert--expand-should-1): Adapt to cl-lib.
+
 2012-11-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp-sh.el (tramp-do-copy-or-rename-file): If both files
