Use cl-lib instead of cl, and interactive-p => called-interactively-p. * lisp/erc/erc-track.el, lisp/erc/erc-networks.el, lisp/erc/erc-netsplit.el: * lisp/erc/erc-dcc.el, lisp/erc/erc-backend.el: Use cl-lib, nth, pcase, and called-interactively-p instead of cl. * lisp/erc/erc-speedbar.el, lisp/erc/erc-services.el: * lisp/erc/erc-pcomplete.el, lisp/erc/erc-notify.el, lisp/erc/erc-match.el: * lisp/erc/erc-log.el, lisp/erc/erc-join.el, lisp/erc/erc-ezbounce.el: * lisp/erc/erc-capab.el: Don't require cl since we don't use it. * lisp/erc/erc.el: Use cl-lib, nth, pcase, and called-interactively-p i.s.o cl. (erc-lurker-ignore-chars, erc-common-server-suffixes): Move before first use. * lisp/json.el: Don't require cl since we don't use it. * lisp/color.el: Don't require cl. (color-complement): `caddr' -> `nth 2'. * test/automated/ert-x-tests.el: Use cl-lib. * test/automated/ert-tests.el: Use lexical-binding and cl-lib.

--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* automated/ert-x-tests.el: Use cl-lib.
+	* automated/ert-tests.el: Use lexical-binding and cl-lib.
+
 2012-11-14  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* automated/ruby-mode-tests.el (ruby-indent-singleton-class): Pass.
@@ -5,8 +10,8 @@
 	(ruby-indent-inside-heredoc-after-space): New tests.
 	Change direct font-lock face references to var references.
 	(ruby-interpolation-suppresses-syntax-inside): New test.
-	(ruby-interpolation-inside-percent-literal-with-paren): New
-	failing test.
+	(ruby-interpolation-inside-percent-literal-with-paren):
+	New failing test.
 
 2012-11-13  Dmitry Gutov  <dgutov@yandex.ru>
 
