--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,9 @@
 2012-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* json.el: Don't require cl since we don't use it.
+	* color.el: Don't require cl.
+	(color-complement): `caddr' -> `nth 2'.
+
 	* calendar/time-date.el (time-to-seconds): De-obsolete.
 
 2012-11-19  Jay Belanger  <jay.p.belanger@gmail.com>
