--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-19  Eli Zaretskii  <eliz@gnu.org>
+
+	* inc/stdint.h (PTRDIFF_MIN) [!__GNUC__]: Define for MSVC.
+
 2012-11-01  Eli Zaretskii  <eliz@gnu.org>
 
 	* inc/unistd.h (setpgid, getpgrp): Provide prototypes.  (Bug#12776)
